fix overlaping banner/about divs

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,10 @@ body {
   font-family: 'Libre Franklin', serif;
 }
 
+a {
+  cursor: pointer;
+}
+
 // .light {
 //   background-color: var(--light-primary);
 // }
