--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -1,3 +1,7 @@
+.about {
+  margin-top: 40px;
+}
+
 .about-p-container {
   display: flex;
   flex-direction: column;
