--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -1,13 +1,24 @@
 .banner {
-  padding: 80px 30px;
+  padding: 40px 30px;
   height: 100vh;
   max-width: 1440px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-top: 20px;
   align-items: center;
-  margin: 20px auto 0 auto;
+  margin: 20px auto;
+
+  h1 {
+    margin: 0;
+    font-size: 28px;
+  }
+
+  .light-text {
+    padding: 0;
+    margin: 0;
+    border: none;
+    color: var(--light-secondary);
+  }
 }
 
 .banner-pink {
@@ -16,21 +27,10 @@
 }
 
 .banner-photo img {
-  width: 220px;
+  width: 200px;
   height: auto;
   border-radius: 50%;
   box-shadow: 3px 3px 23px 3px rgba(65, 63, 63, 0.3);
-}
-
-.banner-h1 {
-  margin: 0;
-}
-
-.banner-h2 {
-  padding: 0;
-  margin: 0;
-  border: none;
-  color: var(--light-secondary);
 }
 
 .banner-btn {
@@ -61,7 +61,14 @@
 }
 
 .banner-p-btn {
+  font-size: 14px;
   margin-bottom: 40px;
+}
+
+@media (max-height: 640px) {
+  .banner {
+    margin-bottom: 60px;
+  }
 }
 
 @media (min-width: 568px) {
@@ -76,8 +83,14 @@
 }
 
 @media (min-width: 720px) {
-  .banner a {
-    visibility: visible;
+  .banner {
+    a {
+      visibility: visible;
+    }
+  
+    h1 {
+      font-size: 52px;
+    }
   }
 
   .banner-photo img {
@@ -85,8 +98,8 @@
     height: auto;
   }
 
-  .banner-intro {
-    padding: 0 100px;
+  .banner-p-btn {
+    font-size: 16px;
   }
 }
 
